--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -8,7 +8,7 @@ jobs:
     - name: Setup Go Env
       uses: actions/setup-go@v1
       with:
-        go-version: 1.15
+        go-version: ^1.20
     - name: checkout code
       uses: actions/checkout@v2
     - name: fetch deps
